--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,9 +65,9 @@
             android:label="@string/helplib_title"
             android:theme="@style/HelpTheme.DayNight" />
 
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="${fabricKey}" />
+        <!--<meta-data-->
+            <!--android:name="io.fabric.ApiKey"-->
+            <!--android:value="${fabricKey}" />-->
 
 
         <provider
