--- a/push/src/main/AndroidManifest.xml
+++ b/push/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:label,android:allowBackup"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:label,android:allowBackup">
 
         <!-- Xposed -->
         <meta-data
@@ -67,7 +67,8 @@
             android:exported="true"
             android:process=":pushservice" />
         <service
-            android:name="com.xiaomi.push.service.PushServiceMain"
+            android:name=".push.service.PushServiceMain"
+            android:enabled="true"
             android:exported="true"
             android:process=":pushservice"
             tools:ignore="ExportedService" />
@@ -164,7 +165,7 @@
         <service
             android:name=".push.service.MiuiPushActivateService"
             android:exported="true" />
-        <service android:name="com.xiaomi.push.sdk.MyPushMessageHandler" />
+        <service android:name=".push.service.MyPushMessageHandler" />
 
         <activity
             android:name=".push.auth.AuthActivity"
@@ -209,13 +210,13 @@
             android:label="@string/title_activity_keepalive"
             android:exported="true" />
 
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="${fabricKey}" />
+        <!--<meta-data-->
+        <!--android:name="io.fabric.ApiKey"-->
+        <!--android:value="${fabricKey}" />-->
 
         <provider
-            android:authorities="com.xiaomi.xmsf.push.control.APIProvider"
             android:name=".push.control.APIProvider"
+            android:authorities="com.xiaomi.xmsf.push.control.APIProvider"
             android:exported="true"
             tools:ignore="ExportedContentProvider" />
 
