--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+//apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -16,16 +16,16 @@ android {
             abiFilters 'armeabi', 'armeabi-v7a', 'x86'
         }
 
-        def fabricKey = null
-        if (project.rootProject.file('local.properties').exists()) {
-            Properties properties = new Properties()
-            properties.load(project.rootProject.file('local.properties').newDataInputStream())
-            fabricKey = properties.getProperty('FABRIC_KEY')
-        }
-        manifestPlaceholders = [fabricKey: fabricKey != null ?
-                fabricKey : System.getenv("FABRIC_KEY")]
+//        def fabricKey = null
+//        if (project.rootProject.file('local.properties').exists()) {
+//            Properties properties = new Properties()
+//            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+//            fabricKey = properties.getProperty('FABRIC_KEY')
+//        }
+//        manifestPlaceholders = [fabricKey: fabricKey != null ?
+//                fabricKey : System.getenv("FABRIC_KEY")]
         buildConfigField "String", "GIT_TAG", "\"" + rootProject.ext.gitTag + "\""
-        // buildConfigField "boolean", "SNAPSHOT", "\"" + rootProject.ext.snapshot + "\""
+        //buildConfigField "boolean", "SNAPSHOT", "\"" + rootProject.ext.snapshot + "\""
     }
     buildTypes {
         debug {
